方向图标更新

--- a/demos/宣宣宣宣宣讲会.html
+++ b/demos/宣宣宣宣宣讲会.html
@@ -179,9 +179,10 @@
               <li>
                 <div>
                   <h2>
-                    Binary / 二进制安全
+				  <img src="../static/images/x96dbg0001-rip.png">
+                    </br>Binary / 二进制安全
                   </h2>
-                  系统内核原理、逆向工程、驱动开发
+                  系统内核原理、逆向工程、漏洞挖掘
                 </div>
               </li>
               <li>
@@ -190,7 +191,7 @@
                     <svg class="fa-link">
                       <use xlink:href="#fa-server"></use>
                     </svg>
-                     Web安全
+                     </br>Web安全
                   </h2>
                    渗透测试、漏洞攻防、数据库安全
                 </div>
@@ -201,17 +202,20 @@
                     <svg class="fa-clock-o">
                       <use xlink:href="#fa-calculator"></use>
                     </svg>
-                    Cryptograpy / 密码学
+                    </br>Cryptograpy / 密码学
                   </h2>
                   数论算法、通讯安全、协议分析
                 </div>
               </li>
               <li>
                 <div>
-                  <h2>
-                    Dev / 开发
-                  </h2>
-                  AI全栈、Web高性能开发、嵌入式开发
+                  <h3>
+				  <svg class="fa-link">
+                      <use xlink:href="#fa-cogs"></use>
+                    </svg>
+                    </br>DevOps
+                  </h3>
+                 AI全栈、Web高性能开发、服务器运维
                 </div>
               </li>
               <li>
@@ -220,7 +224,7 @@
                     <svg class="fa-text-height">
                       <use xlink:href="#fa-paint-brush"></use>
                     </svg>
-                    Design / 美工
+                    </br>Design / 美工
                   </h2>
                   UI/UX 设计、网页以及海报设计制作
                 </div>
@@ -228,10 +232,13 @@
               <li>
                 <div>
                   <h2>
-                    <span>+<sup>+</sup></span>
-                    Game
+                    <svg class="fa-text-height">
+                      <use xlink:href="#fa-steam"></use>
+                    </svg>
+                    </br>Game
                   </h2>
-                  STEAM、OSU、LOL、GALGAMEs
+                  OSU、LOL、GALGAMEs、WoW、Minecraft、MH World、OW、neko、l4d2
+、dota2 ......
                 </div>
               </li>
             </ul>
