--- a/demos/宣宣宣宣宣讲会.html
+++ b/demos/宣宣宣宣宣讲会.html
@@ -488,9 +488,7 @@
 				PWN 所需技能
 			</h4>
 		  </div>
-			
 		  </header>
-		  
 		  <div class="wrap fadeIn">
 			<h2>
 				扎实的逆向工程基础
@@ -739,6 +737,71 @@
             <!-- end .content-center -->
           </div>
           <!-- .end .wrap -->
+        </section>
+		
+		<section class="bg-apple aligncenter">
+          <!--.wrap = container (width: 90%) -->
+		  <div class="wrap zoomIn">
+			<h1>
+				DevOps
+			</h1>
+		  </div>
+          <!-- .end .wrap -->
+		  <footer>
+				<img class="alignright size-10" src="../static/images/cnsslogo-2000px.png">
+		  </footer>
+        </section>
+		
+		<section class="bg-apple aligncenter">
+          <!--.wrap = container (width: 90%) -->
+		  <div class="wrap fadeIn">
+			<h1>
+				什么是 DevOps
+			</h1>
+			</br></br></br>
+			<h4>
+				<strong>Dev</strong>elopment and <strong>Op</strong>eration<strong>s</strong>
+			</h4>
+			<h4>
+				软件开发 & IT运维
+			</h4>
+			
+		  </div>
+          <!-- .end .wrap -->
+		  <footer>
+				<img class="alignright size-10" src="../static/images/cnsslogo-2000px.png">
+		  </footer>
+        </section>
+		
+		<section class="bg-apple aligncenter">
+          <!--.wrap = container (width: 90%) -->
+		  <div class="wrap zoomIn">
+			<h1>
+				美工 / Design
+			</h1>
+		  </div>
+          <!-- .end .wrap -->
+		  <footer>
+				<img class="alignright size-10" src="../static/images/cnsslogo-2000px.png">
+		  </footer>
+        </section>
+		
+		<section class="bg-apple aligncenter">
+          <!--.wrap = container (width: 90%) -->
+		  <div class="wrap fadeIn">
+			
+			<h1>
+				UI & UX
+			</h1>
+			<p>
+				用户界面 & 用户体验
+			</p>
+			
+		  </div>
+          <!-- .end .wrap -->
+		  <footer>
+				<img class="alignright size-10" src="../static/images/cnsslogo-2000px.png">
+		  </footer>
         </section>
 		
 		
