--- a/demos/宣宣宣宣宣讲会.html
+++ b/demos/宣宣宣宣宣讲会.html
@@ -848,6 +848,81 @@
           <!-- .end .wrap -->
         </section>
 		
+		<section class="bg-apple aligncenter">
+          <!--.wrap = container (width: 90%) -->
+		  <div class="wrap zoomIn">
+			<h1>
+				招新相关
+			</h1>
+		  </div>
+          <!-- .end .wrap -->
+		  <footer>
+				<img class="alignright size-10" src="../static/images/cnsslogo-2000px.png">
+		  </footer>
+        </section>
+		
+		<section class="bg-apple aligncenter">
+          <!--.wrap = container (width: 90%) -->
+		  <div class="wrap fadeInUp">
+			<h1>
+				长达 <strong>一个月</strong> 的招新线上赛
+			</h1>
+			<h4>9月22日（明天）正式开启</h4>
+		  </div>
+          <!-- .end .wrap -->
+        </section>
+		
+		<section class="bg-apple aligncenter">
+          <!--.wrap = container (width: 90%) -->
+		  <div class="wrap fadeInUp">
+			<h1>
+				赛制：CTF 夺旗赛
+			</h1>
+			</br>
+			<h4>每一道题的目标是获得一枚Flag，将你获取到的Flag提交以得分</h4>
+		  </div>
+          <!-- .end .wrap -->
+        </section>
+		
+		<section class="bg-apple aligncenter">
+          <!--.wrap = container (width: 90%) -->
+		  <div class="wrap fadeIn">
+		  <h3>理论上</h3>
+			<h1>
+				<strong>不限制</strong> 招收人数
+			</h1>
+			<h4>年级不限、学院不限</h4>
+		  </div>
+          <!-- .end .wrap -->
+        </section>
+		
+		</section>
+		
+		<section class="bg-apple aligncenter">
+          <!--.wrap = container (width: 90%) -->
+		  <div class="wrap fadeIn">
+			<h1>
+				恒心、毅力、进取，不半途而废
+			</h1>
+			<h4>CNSS 将成为你梦的起点</h4>
+		  </div>
+          <!-- .end .wrap -->
+        </section>
+		
+		<section class="bg-apple aligncenter">
+          <!--.wrap = container (width: 90%) -->
+		  <div class="wrap">
+				<img class="aligncenter size-20" src="../static/images/cnsslogo-2000px.png">
+				
+				<div class="flex-content" >
+					<h4><I><strong>JOIN US</strong> To Hack the World</I></h4>
+				</div>
+		  </div>
+		  
+          <!-- .end .wrap -->
+        </section>
+		
+		
       </article>
     </main>
     <!--main-->
